# temporary-test-repo-A-forked

./: CHANGELOG.rst  CONTRIBUTORS.json  LICENSE.txt  Makefile  README.rst  TESTING.rst  pyproject.toml  temporary-test-file.txt
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  installing_prerequisites.rst  rclone_instead.rst.DISABLED  submitr.rst  submitr.scripts.rst  submitr.tests.rst  usage.rst
docs/source/_static/images/: submitr-banner.xcf
submitr/: base.py  exceptions.py  portal_network_access.py  submission.py  utils.py
submitr/scripts/: check_submission.py  make_sample_fastq_file.py  resume_uploads.py  show_upload_info.py  submit_genelist.py  submit_metadata_bundle.py  submit_ontology.py  upload_item_data.py
submitr/tests/: conftest_settings.py  test_base.py  test_check_submission.py  test_exceptions.py  test_make_sample_fastq_file.py  test_misc.py  test_resume_uploads.py  test_show_upload_info.py  test_submission.py  test_submit_genelist.py  test_submit_metadata_bundle.py  test_submit_ontology.py  test_testing_helpers.py  test_upload_item_data.py  test_utils.py  testing_helpers.py
submitr/tests/data/: submission_simple.xlsx  submission_simple2.xlsx  submission_test.xlsx  submission_test_with_errors.xlsx
