[tool.poetry]
name = "submitr"
version = "0.3.3"
description = "Support for uploading file submissions to SMAHT."
# TODO: Update this email address when a more specific one is available for SMaHT.
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.rst"
keywords = ["submitr", "smaht"]
homepage = "https://github.com/smaht-dac/submitr"
repository = "https://github.com/smaht-dac/submitr.git"
packages = [
  { include="submitr", from="." }
]

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  'Development Status :: 4 - Beta',

  # Indicate who your project is intended for
  'Intended Audience :: Developers',
  'Intended Audience :: Science/Research',

  'Topic :: Database :: Database Engines/Servers',

  # Pick your license as you wish (should match "license" above)
  'License :: OSI Approved :: MIT License',

  'Natural Language :: English',

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate whether you support Python 2, Python 3 or both.
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',

]
include = [
  "LICENSE",
]

[tool.poetry.dependencies]

python = ">=3.7.0,<3.10"

awscli = "^1.27.79"
# boto3 = "^1.26.79"
dcicutils = "^7.7.1"
# TODO: Consider an upgrade to PyYAML 6.
# David wanted PyYAML 5 pinned at 5.3.1 for M1, but noted we should investigate upgrading to PyYAML 6.
# Specifically, on https://github.com/smaht-dac/submitr/pull/5, he wrote:
#   << Looks like at least for M1 will have to pin pyyaml to 5.3.1 (or 6.0 but dcicutils has restriction on that). >>
# Kent asked whether 5.3.1 or ^5.3.1, and also if PyYAML 6 has incompatibilities. David wrote:
#   << M1 only 5.3.1 specifically or 6.0 or 6.0.1 installs without error.
#      At least according the pyyaml change log (https://github.com/yaml/pyyaml/blob/master/CHANGES)
#      I don't see anything too scary WRT updating generally (e.g. dcicutils)
#      to 6.0.1 (except maybe "always require Loader arg to yaml.load()"). >>
PyYAML = "5.3.1"  # pinned for M1. See notes above.
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

# PyCharm says boto3-stubs contains useful type hints
# boto3-stubs = "^1.26.79"

# Coverage
codacy-coverage = ">=1.3.11"
coverage = ">=6.5.0"
# Loaded manually in GA workflow for coverage because a dependency on 2to3
# in its docopts dependency makes a problem for laoding it here in poetry. -kmp 7-Apr-2023
# coveralls = ">=3.3.1"

# Linting generally
flake8 = ">=3.9.2"

pip-licenses = ">=3.5.5"

# pygments is used by PyCharm
pygments = ">=2.14.0"

# PyTest and its auxiliary support files
pytest = ">=7.2.1"  # ">=6.2.5"
pytest-cov = ">=4.0.0"  # "2.12.1" # >=
pytest-mock = ">=3.10.0"  # 3.6.1"  # >=
pytest-runner = ">=6.0.0"  # "5.3.1"  # >=

# Docs build dependencies
sphinx = ">=3.5.4"  # should be 5.1.1?
sphinx-rtd-theme = ">=1.2.0"

[tool.poetry.scripts]

check-submission= "submitr.scripts.check_submission:main"
make-sample-fastq-file = "submitr.scripts.make_sample_fastq_file:main"
publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"
resume-uploads = "submitr.scripts.resume_uploads:main"
show-submission-info = "submitr.scripts.show_submission_info:main"
show-upload-info = "submitr.scripts.show_upload_info:main"
submit-genelist = "submitr.scripts.submit_genelist:main"
submit-metadata-bundle = "submitr.scripts.submit_metadata_bundle:main"
submit-ontology = "submitr.scripts.submit_ontology:main"
upload-item-data = "submitr.scripts.upload_item_data:main"

[tool.coverage.report]

# https://coverage.readthedocs.io/en/latest/config.html
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover"
]

[tool.pytest.ini_options]
markers = [
  "static: a test that tests the static form of code, not its runtime functionality"
]


[build-system]

requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
